fix spacing issue

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,6 +5,7 @@
 	background-color: rgba(36,32,33,0.50);
 	padding: 1%;
 	color: white;
+	margin-bottom: 50px;
 }
 
 .awesome-sauce {
